--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 Deny from all
-Allow from 192.168.2.1/16
+Allow from all
 SetEnv AuthUser user
 SetEnv AuthPass user
-SetEnv camPaths "/mnt/hikvision/spicam1/info.bin,/mnt/hikvision/spicam3/info.bin,/mnt/hikvision/spicam2/info.bin,/mnt/hikvision/spicam4/info.bin"
-SetEnv camNames "Kouzina,Saloni,Trapezaria,Backyard"
+SetEnv camPaths "/mnt/hikvision/spicam1/info.bin,/mnt/hikvision/spicam2/info.bin"
+SetEnv camNames "Kouzina,Saloni"
+SetEnv camIPs "192.168.1.160,192.168.1.161"
+SetEnv camAuths "admin:password,admin:password"
 
